--- a/knowHyeji.html
+++ b/knowHyeji.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./hyeji.css" />
+    <link rel="stylesheet" href="./src/Hyeji.css" />
     <title>know hyeji</title>
   </head>
   <body>
@@ -18,7 +18,7 @@
             <span></span>
             <span></span>
             <span></span>
-            <img class="me" src="./image/person_me.png" alt="전신" />
+            <img class="me" src="/person_me.png" alt="전신" />
           </div>
         </div>
         <div class="section_clothes">
@@ -26,20 +26,19 @@
             <div class="shirt area">
               <span></span>
               <span></span>
-              <img class="cloth" src="./image/shirt.png" alt="" />
+              <img class="cloth" src="/shirt.png" alt="셔츠" />
               <div class="hover_effect">
-                <img src="./image/shirt.png" alt="" />
+                <img src="/shirt.png" alt="" />
               </div>
               <p class="hover_txt">click!</p>
             </div>
-
             <div class="pants area">
               <span></span>
               <span></span>
               <span></span>
-              <img class="cloth" src="./image/jeans.png" alt="" />
+              <img class="cloth" src="/jeans.png" alt="" />
               <div class="hover_effect">
-                <img src="./image/jeans.png" alt="" />
+                <img src="/jeans.png" alt="" />
               </div>
               <p class="hover_txt">click!</p>
             </div>
@@ -47,9 +46,9 @@
               <span></span>
               <span></span>
               <span></span>
-              <img class="cloth" src="./image/t-shirt.png" alt="" />
+              <img class="cloth" src="/t-shirt.png" alt="" />
               <div class="hover_effect">
-                <img src="./image/t-shirt.png" alt="" />
+                <img src="/t-shirt.png" alt="" />
               </div>
               <p class="hover_txt">click!</p>
             </div>
@@ -59,9 +58,9 @@
               <span></span>
               <span></span>
               <span></span>
-              <img class="cloth" src="./image/hoodie.png" alt="" />
+              <img class="cloth" src="/hoodie.png" alt="" />
               <div class="hover_effect">
-                <img src="./image/hoodie.png" alt="" />
+                <img src="/hoodie.png" alt="" />
               </div>
               <p class="hover_txt">click!</p>
             </div>
@@ -70,18 +69,18 @@
               <span></span>
               <span></span>
               <span></span>
-              <img class="cloth" src="./image/shoe.png" alt="" />
+              <img class="cloth" src="/shoe.png" alt="" />
               <div class="hover_effect">
-                <img src="./image/shoe.png" alt="" />
+                <img src="/shoe.png" alt="" />
               </div>
               <p class="hover_txt">click!</p>
             </div>
             <div class="cap area">
               <span></span>
               <span></span>
-              <img class="cloth" src="./image/cap.png" alt="" />
+              <img class="cloth" src="/cap.png" alt="" />
               <div class="hover_effect">
-                <img src="./image/cap.png" alt="" />
+                <img src="/cap.png" alt="" />
               </div>
               <p class="hover_txt">click!</p>
             </div>
@@ -94,6 +93,6 @@
       <div class="closeButton">닫기</div>
     </div>
   </body>
-  <script type="module" src="./knowHyeji.js"></script>
-  <script type="module" src="./Hyeji.js"></script>
+  <script type="module" src="./src/knowHyeji.js"></script>
+  <script type="module" src="./src/Hyeji.js"></script>
 </html>
