--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,600;1,300&family=Reenie+Beanie&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="/main.css" />
     <title>lucky!</title>
   </head>
   <body>
@@ -41,6 +41,6 @@
     </div>
   </body>
 
-  <script src="./main.js"></script>
+  <script src="./src/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 </html>
