--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   </body>
 
   <!-- <script src="./src/main.js"></script> -->
-  <script src="/dist/main.js"></script>
+  <!-- <script src="/dist/main.js"></script> -->
+  <script type="module" src="/dist/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 </html>
