--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
 
   <!-- <script src="./src/main.js"></script> -->
   <!-- <script src="/dist/main.js"></script> -->
-  <script type="module" src="/dist/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 </html>
