--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
     />
     <!-- <link rel="stylesheet" href="./src/main.css" /> -->
+    <link rel="stylesheet" href="./src/Hyeji.css" />
     <title>lucky!</title>
   </head>
   <body>
