--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,600;1,300&family=Reenie+Beanie&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <!-- <link rel="stylesheet" href="./src/main.css" /> -->
     <link rel="stylesheet" href="./src/main.css" />
     <title>lucky!</title>
   </head>
@@ -44,6 +43,6 @@
 
   <!-- <script src="./src/main.js"></script> -->
   <!-- <script src="/dist/main.js"></script> -->
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="./src/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 </html>
